--- a/src/components/Hero/HeroSection.module.css
+++ b/src/components/Hero/HeroSection.module.css
@@ -3,40 +3,122 @@
   padding: 80px 24px 0px;
   overflow: hidden;
   max-height: 763px;
-  text-align: center;
   color: rgb(var(--white));
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
 }
 
-.hero h1 {
+@media screen and (min-width: 768px) {
+  .hero {
+    border-radius: 15px;
+    padding-top: 60px;
+    max-height: 783px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .hero {
+    padding: 145px 96px 0px;
+    max-height: 495px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+  }
+}
+
+.heroDetails {
+  text-align: center;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 1440px) {
+  .heroDetails {
+    text-align: left;
+    align-items: start;
+    gap: 40px;
+    min-width: 540px;
+  }
+}
+
+.heroDetails h1 {
   font-size: 2rem;
   font-weight: 500;
   line-height: 1.125;
-  z-index: 1;
+  max-width: 327px;
+  z-index: 2;
 }
 
-.hero p {
+@media screen and (min-width: 768px) {
+  .heroDetails h1 {
+    font-size: 3rem;
+    line-height: 1;
+    max-width: 573px;
+  }
+}
+
+.heroDetails p {
   font-size: 0.9375rem;
   line-height: 1.67;
   margin-top: 14px;
   margin-bottom: 24px;
-  z-index: 1;
+  z-index: 2;
+  max-width: 327px;
 }
 
-.hero button {
-  z-index: 1;
+@media screen and (min-width: 768px) {
+  .heroDetails p {
+    margin-top: 28px;
+    margin-bottom: 20px;
+    max-width: 445px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .heroDetails p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    max-width: 400px;
+  }
+}
+
+.heroDetails button {
+  z-index: 2;
 }
 
 .hero img {
-  margin: -100px;
+  margin-top: -100px;
   z-index: 1;
+}
+
+@media screen and (min-width: 1440px) {
+  .hero img {
+    margin-top: -178px;
+    margin-left: -73px;
+  }
 }
 
 .svg {
   position: absolute;
   top: 100px;
   left: 0;
+  z-index: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .svg {
+    left: 25%;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .svg {
+    top: 0;
+    right: 0;
+    left: revert;
+  }
 }
