--- a/src/components/Hero/HeroSection.module.css
+++ b/src/components/Hero/HeroSection.module.css
@@ -30,7 +30,7 @@
 
 .heroDetails {
   text-align: center;
-  z-index: 1;
+  /* z-index: 1; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@
   font-weight: 500;
   line-height: 1.125;
   max-width: 327px;
-  z-index: 2;
+  z-index: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -66,7 +66,7 @@
   line-height: 1.67;
   margin-top: 14px;
   margin-bottom: 24px;
-  z-index: 2;
+  z-index: 1;
   max-width: 327px;
 }
 
