--- a/src/pages/Root/RootLayout.module.css
+++ b/src/pages/Root/RootLayout.module.css
@@ -1,6 +1,9 @@
 .wrapper {
   max-width: 1111px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 120px;
 }
 
 @media screen and (min-width: 768px) {
