--- a/src/App/BaseStyles.css
+++ b/src/App/BaseStyles.css
@@ -10,10 +10,10 @@
   --lightGray: 241 243 245;
 
   /* Font sizes*/
-  --heading1: 48px;
-  --heading2: 40px;
-  --heading3: 20px;
-  --body: 16px;
+  --heading1: 3rem;
+  --heading2: 2.5rem;
+  --heading3: 1.25rem;
+  --body: 1rem;
 }
 
 body {
@@ -21,31 +21,30 @@ body {
   color: rgb(var(--darkGrey));
   background-color: rgb(var(--white));
   font-weight: 400;
-  line-height: 26px;
+  line-height: 1.625;
   font-family: "Jost", sans-serif;
-}
-
-.heading {
-  font-weight: 500;
 }
 
 .heading1 {
   font-size: var(--heading1);
   color: rgb(var(--black));
   line-height: 1;
+  font-weight: 500;
 }
 
 .heading2 {
   font-size: var(--heading2);
   color: rgb(var(--black));
-  line-height: 48px;
-  letter-spacing: 2px;
+  line-height: 1.2;
+  letter-spacing: 0.125rem;
+  font-weight: 500;
 }
 
 .heading3 {
   font-size: var(--heading3);
-  line-height: 26px;
-  letter-spacing: 5px;
+  font-weight: 500;
+  line-height: 1.3rem;
+  letter-spacing: 0.3125rem;
   text-transform: uppercase;
 }
 
