--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,100 +1,152 @@
-.callToActionWrapper {
-  padding: 0 24px;
-  --body: 0.9375rem;
+.footerWrapper {
+  background-color: rgb(var(--black));
+  margin: -189px auto 0px;
+  padding: 253px 24px 65px;
 }
 
 @media screen and (min-width: 768px) {
-  .callToActionWrapper {
-    padding: 0 41px;
-    --body: 1rem;
+  .footerWrapper {
+    margin-top: -86px;
+    padding: 166px 39px 80px;
   }
 }
 
-.callToAction {
-  position: relative;
+@media screen and (min-width: 1440px) {
+  .footerWrapper {
+    margin-top: -72px;
+    padding: 144px 39px 72px;
+  }
+}
+
+.footerContent {
   max-width: 1111px;
-  margin: 0 auto;
-  padding: 64px 10px;
-  background-color: rgb(var(--peach));
-  text-align: center;
-  border-radius: 15px;
-  overflow: hidden;
+  margin: 0px auto;
 }
 
-@media screen and (min-width: 768px) {
-  .callToAction {
-    padding: 60px 0px;
-  }
+.logo {
+  height: 27px;
+  width: 202px;
+  background-image: url("src/assets/shared/desktop/logo-light.png");
+  background-size: 202px 27px;
 }
 
-@media screen and (min-width: 1440px) {
-  .callToAction {
-    padding: 72px 95px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: left;
-  }
-}
-
-.callToActionWrapper svg {
-  position: absolute;
-  top: -102px;
-  left: -240px;
-  right: auto;
-  z-index: 1;
-}
-
-@media screen and (min-width: 768px) {
-  .callToActionWrapper svg {
-    top: -118px;
-    left: -20px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .callToActionWrapper svg {
-    right: 0;
-    top: -146px;
-    left: auto;
-  }
-}
-
-.callToActionWrapper button {
-  height: fit-content;
-  position: relative;
-  z-index: 2;
-}
-
-.callToActionText {
-  margin-bottom: 32px;
+.footerNav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 16px;
-  color: rgb(var(--white));
-  position: relative;
-  z-index: 2;
 }
 
 @media screen and (min-width: 768px) {
-  .callToActionText {
-    gap: 12px;
+  .footerNav {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: end;
   }
 }
 
-@media screen and (min-width: 1440px) {
-  .callToActionText {
-    margin-bottom: 0px;
-    align-items: start;
+.footerNav a {
+  order: 1;
+}
+
+.footerNav a:hover {
+  text-decoration: underline;
+}
+
+.footerNavLinks {
+  order: 3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 32px;
+  gap: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .footerNavLinks {
+    flex-direction: row;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    gap: 42px;
   }
 }
 
-.callToActionText h2 {
+.footerNavLinks li {
   color: rgb(var(--white));
-  max-width: 279px;
+  font-size: 0.875rem;
+  line-height: 1;
+  text-transform: uppercase;
+  letter-spacing: 0.125rem;
 }
 
-.callToActionText p {
-  max-width: 450px;
+.footerNav hr {
+  width: 100%;
+  height: 1px;
+  background-color: rgb(var(--darkGray));
+  order: 2;
+  margin-top: 32px;
+  border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .footerNav hr {
+    flex-basis: 100%;
+    order: 3;
+    margin-top: 41px;
+    justify-self: end;
+  }
+}
+
+.addressList {
+  margin-top: 40px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .addressList {
+    margin-top: 30px;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: space-between;
+  }
+}
+
+.address {
+  flex-grow: 1;
+}
+
+.address p {
+  color: rgb(var(--white) / 50%);
+}
+
+.address p:first-child {
+  font-weight: 700;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  flex-grow: 2;
+  fill: rgb(var(--peach));
+}
+
+.icons svg {
+  cursor: pointer;
+}
+
+.icons svg:hover {
+  fill: rgb(var(--lightPeach));
+}
+
+@media screen and (min-width: 768px) {
+  .icons {
+    justify-content: end;
+  }
 }
