--- a/src/components/MainNavigation/MainNavigation.module.css
+++ b/src/components/MainNavigation/MainNavigation.module.css
@@ -26,7 +26,7 @@
 .logo {
   height: 27px;
   width: 202px;
-  background-image: url("../../assets/shared/desktop/logo-dark.png");
+  background-image: url("src/assets/shared/desktop/logo-dark.png");
   background-size: 202px 27px;
 }
 
